Stop header from overflowing when screen gets too small

--- a/shifter/static/calendarview/style.css
+++ b/shifter/static/calendarview/style.css
@@ -30,7 +30,7 @@ body {
 
 /* Header with Shifter and user greeting */
 header {
-    height: 10%;
+    
     display: grid;
     grid-template-columns: 90% 10%;
 }
